# snv-PII-redact

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SHOWCASE_DEMO.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: config.py  face_detection.py  main.py  models.py  ocr.py  table_detection.py  text_mapping.py
backend/services/: __init__.py  dedup.py  fuzzy.py  llm.py  presidio_analysis.py  redaction.py
benchmark/: __init__.py  accuracy_benchmark.py  common.py  html_report.py  performance_benchmark.py  run_benchmark.py
benchmark_outputs/20260411T053440Z/: benchmark_report.html  combined_summary.json
benchmark_outputs/20260411T053440Z/accuracy/: accuracy_rows.csv  accuracy_rows.jsonl  accuracy_summary.json  sample_manifest.json
benchmark_outputs/20260411T053440Z/performance/: pdf_manifest.json  performance_jobs.csv  performance_jobs.json  (+1 more)
benchmark_outputs/20260411T064734Z/: benchmark_report.html  combined_summary.json
benchmark_outputs/acc_isolation/: accuracy_rows.csv  accuracy_rows.jsonl  accuracy_summary.json  sample_manifest.json
benchmark_outputs/perf_isolation/: performance_jobs.csv  performance_jobs.json  performance_summary.json
extension/: DATATRANSFER_EXPLANATION.md  README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
extension/shared/: config.js
frontend/: app.js  app.py  index.html
tests/: conftest.py  test_dedup.py  test_face_detection.py  test_fuzzy.py  test_llm.py  test_presidio_analysis.py  test_text_mapping.py
(+7 files in other folders)
